--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 :root {
     --main-color: #7ab317; /* 緑系 */
     --accent-color: #2e5c33; /* 濃い緑 */
-    --hirosakiS-color: #ff2222;
+    --hirosakiS-color: #ff2222; /* 広崎新幹線 */
     --sakura-color: #e88bac; /* 桜色 */
     --koyo-color: #a0522d; /* 紅葉線（茶色） */
     --text-color: #333;
