--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
 :root {
     /* 路線テーマ */
-    --theme-hirosakiS: #008cff;
-    --theme-hirosakiM: #ff3366;
+    --theme-hirosakiS: #ff3366;
+    --theme-hirosakiM: #008cff;
     --theme-tsuchisaki: #b88e1c;
     
     /* コーポレートカラー (KNR) */
